--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ABAEnrichment
 Type: Package
 Title: Gene expression enrichment in human brain regions
-Version: 1.5.8
-Date: 2016-11-24
+Version: 1.5.9
+Date: 2017-04-06
 Author: Steffi Grote
 Maintainer: Steffi Grote <steffi_grote@eva.mpg.de>
 Description: The package ABAEnrichment is designed to test for
@@ -16,7 +16,9 @@ Description: The package ABAEnrichment is designed to test for
         analyses. Additional functions provided in this package like
         'get_expression' and 'plot_expression' facilitate exploring the
         expression data. From version 1.3.5 onwards genomic regions 
-        can be provided as input, too.
+        can be provided as input, too; and from version 1.5.9 onwards
+        the function 'get_annotated_genes' offers an easy way to obtain
+        annotations of genes to enriched or user-defined brain regions.
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.11.5), gplots (>= 2.14.2), gtools (>= 3.5.0), ABAData (>= 0.99.2)
 Depends: R (>= 3.2)
