--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,8 @@
 useDynLib(ABAEnrichment)
 export("aba_enrich","get_expression","plot_expression","get_name","get_sampled_substructures","get_superstructures", "get_annotated_genes", "get_id")
-importFrom(Rcpp, evalCpp)  
+importFrom("Rcpp", "evalCpp")  
 importFrom("grDevices", "heat.colors", "rainbow")
 importFrom("stats", "aggregate", "quantile")
 importFrom("utils", "data", "read.table", "write.table")
 
-import(gplots, gtools, ABAData)
+import(gplots, gtools, ABAData, data.table)
