--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-useDynLib(ABAEnrichment)
+useDynLib(ABAEnrichment, .registration = TRUE)
 export("aba_enrich","get_expression","plot_expression","get_name","get_sampled_substructures","get_superstructures", "get_annotated_genes", "get_id")
 importFrom("Rcpp", "evalCpp")  
 importFrom("grDevices", "heat.colors", "rainbow")
