--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ABAEnrichment
 Type: Package
 Title: Gene expression enrichment in human brain regions
-Version: 1.11.0
-Date: 2018-04-11
+Version: 1.11.1
+Date: 2018-06-06
 Author: Steffi Grote
 Maintainer: Steffi Grote <steffi_grote@eva.mpg.de>
 Description: The package ABAEnrichment is designed to test for
@@ -15,10 +15,10 @@ Description: The package ABAEnrichment is designed to test for
         ontology enrichment software FUNC to perform the statistical
         analyses. Additional functions provided in this package like
         'get_expression' and 'plot_expression' facilitate exploring the
-        expression data. From version 1.3.5 onwards genomic regions 
-        can be provided as input, too; and from version 1.5.9 onwards
-        the function 'get_annotated_genes' offers an easy way to obtain
-        annotations of genes to enriched or user-defined brain regions.
+        expression data, and besides the standard candidate vs. background
+        gene set enrichment, also three additional tests are implemented,
+        e.g. for cases when genes are ranked instead of divided into
+        candidate and background.
 License: GPL (>= 2)
 Imports: 
     Rcpp (>= 0.11.5),
